# otuscpp1

./: .cproject  .project  .travis.yml  CMakeCache.txt  CMakeLisits.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  buildNumber.cpp  buildNumber.h  buildNumber.h.in  lib.cpp  lib.h  main.cpp  test_build.cpp
Debug/: buildNumber.d  main.d  makefile  subdir.mk  test_build.d
